# DostySpeak

./: .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE.md  README-COMMIT.md  README-SYNC-TO-GIT.md  README.md  RUN_BUILDER_WINDOWS_LTS2019.bat  THIRD_PARTY_NOTICES.md  build.sh
.github/workflows/: build.yml
DostySpeak-main/: CMakeLists.txt  HOW_TO_RUN_WINDOWS_10_LTSC_2019.txt  LICENSE  README-COMMIT.md  README.md
DostySpeak-main/docs/: EDGE_TTS.md  GUI_TOOLKIT_OPTIONS.md  SPEECH_ENGINES.md  TERMINAL_BUILDERS.md  WINDOWS_PIPER_LTSC.md
DostySpeak-main/legacy-win32/: README.md  main.cpp
DostySpeak-main/mobile/: IosTts.h  IosTts.mm  MobileBridge.cpp  MobileBridge.h  main_mobile.cpp
DostySpeak-main/mobile/qml/: main.qml
DostySpeak-main/packaging/debian/: control
DostySpeak-main/packaging/macos/: README.md
DostySpeak-main/resources/i18n/: cs.json  en.json
DostySpeak-main/resources/icons/: dosty-speak.icns
DostySpeak-main/resources/voices/: catalog.json
DostySpeak-main/scripts/: apply-linux-packaging-fix.sh  build-android-apk-windows.ps1  build-android-apk.sh  build-linux-i386.sh  build-macos-release-terminal.sh  build-mobile-preview-macos.sh  build-windows-portable.ps1  build-windows-release-gui.ps1  build_log_viewer.py  build_terminal_linux_ui.py  build_terminal_macos_ui.py  check-windows-installer-script.ps1  check-windows-x86-support.ps1  clean-windows-build.ps1  debug-macos-run.sh  deploy-windows-powershell.ps1  deploy-windows-x86-powershell.ps1  diagnose-build-config.sh  diagnose-desktop-cmake.sh  diagnose-mobile-preview-macos.sh  install-android-apk.sh  install-linux-build-deps.sh  install-linux.sh  install-mobile-build-deps-macos.sh  install-qt-ios-kit-macos.sh  package-macos-desktop.sh  package-mobile-preview-macos.sh  reinstall-macos-desktop-clean.sh  repair-msys2-keyring.ps1  reset-macos-settings.sh  reset-macos.sh  reset-windows.ps1  run-mobile-preview-macos.sh  uninstall-windows-user.ps1  use-full-xcode-macos.sh  verify-macos-dist.sh
DostySpeak-main/src/: AppInfo.h  AppPaths.h  I18n.cpp  I18n.h  MainWindow.h  Settings.cpp
DostySpeak-main/src/windows/: dosty-speak.rc
DostySpeak-main/tools/: sync-this-version-to-git.ps1  sync-this-version-to-git.sh
build-macos/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-macos/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-macos/dosty-speak_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-macos/dosty-speak_autogen/UVLADIE3JM/: moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_Speaker.cpp  moc_Speaker.cpp.d
cmake/: DostyPackaging.cmake
docs/: DEPENDENCIES.md  MOBILE.md  MSYS2_KEYRING_REPAIR.md  ONLINE_VOICES.md  TERMINAL_BUILDERS.md  TUI-RUN-INSTRUCTIONS.md  WINDOWS_BUILD.md  WINDOWS_X86_NOTES.md
mobile/: CMakeLists.txt
mobile/android/: AndroidManifest.xml
mobile/android/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
mobile/android/res/values/: styles.xml
mobile/android/src/cz/dosty/speak/: DostyTts.java
mobile/ios/: README.md
mobile/qml/: main.qml
packaging/appimage/: README.md
packaging/windows/: LICENSE-installer.txt  README.md  dosty-speak.nsi
resources/: dosty-speak.desktop
resources/i18n/: cs.json  en.json
resources/icons/: dosty-speak.icns
scripts/: android-logcat-dosty.sh  apply-linux-packaging-fix.sh  build-android-apk-windows.ps1  build-ios.sh  build-linux-packages.sh  build-linux-release-terminal.sh  build-terminal-linux.sh  build-terminal-macos.sh  build-terminal-windows.ps1  build-windows-installer.ps1  build-windows-powershell.ps1  build-windows-release-terminal.ps1  build-windows-release.ps1  build_terminal_linux_ui.py  capture-android-crash-log.sh  diagnose-ios-build-env.sh  diagnose-macos-desktop-release.sh  diagnose-mobile-bridge.sh  install-macos.sh  install-windows-msys2.ps1  install-windows-user.ps1  open-ios-xcode-project.sh  prepare-ios-iphone.sh  print-mobile-env-hints.sh  reset-linux.sh  run-windows-deployed.ps1  start-builder.sh  version.sh
src/: AppInfo.cpp  AppPaths.cpp  I18n.cpp  MainWindow.cpp  MainWindow.h  PhraseStore.cpp  PhraseStore.h  Settings.cpp  Settings.h  Speaker.cpp  Speaker.h  VoiceCatalog.cpp  VoiceCatalog.h  main.cpp  resources.qrc
src/windows/: dosty-speak.rc.in
